# time_tracer_cpp

./: .gitignore  .gitmodules  README.en.md  README.md  TODO.md  et --soft HEAD~  interval_processor.cpp  interval_processor.json  log_processor.cpp  log_processor.json
apps/log_generator/: CHANGELOG.md  CMakeLists.txt  HISTORTY.md  build.sh
apps/log_generator/cmake/: CompilerOptions.cmake  Dependencies.cmake  FileOperations.cmake  SourceFileCollection.cmake  Sources.cmake  StandardSettings.cmake  TargetSetup.cmake
apps/log_generator/config/: activities_config.json  activities_config.toml  common_activities.json  mapping_config.toml
apps/log_generator/src/: main.cpp  pch.h  pch.hpp  version.h  version.hpp
apps/time_master/: CMakeLists.txt  build.py  build_clang.sh  build_gcc.sh  build_install.sh
apps/time_master/cmake/: BuildTypeFlags.cmake  Packaging.cmake  SourceFileCollection.cmake  TargetSetup.cmake  Win32PostBuildCopy.cmake
apps/time_master/scripts/: build.py  build.sh  build_config.py  build_tasks.py  config.toml
apps/time_master/src/: main_cli.cpp  pch.hpp
apps/time_tracer/: CMakeLists.txt
apps/time_tracer/cmake/: AddReportsDataLibrary.cmake  AddReportsLibrary.cmake  BuildTypeFlags.cmake  Packaging.cmake  README.md  SourceFileCollection.cmake  TargetSetup.cmake  Win32PostBuildCopy.cmake  clang-mingw-toolchain.cmake  mingw-toolchain.cmake
apps/time_tracer/config/: config.json  config.toml
apps/time_tracer/scripts/: build.py  build.sh  build_commands.py  build_config.py  build_install.sh  build_tasks.py  build_ui.py  config.toml
apps/time_tracer/src/: main_cli.cpp  pch.hpp
db/: CMakeLists.txt  bash.sh  build.bat  data_parser.cpp  data_parser.h  database_importer.cpp  database_importer.h  database_querier.cpp  main.cpp  query_day.cpp  query_day.h  query_period.cpp  query_period.h  time_tracker.cpp
db/common/: common_utils.cpp  common_utils.h
db/database/: database_importer.cpp  database_importer.h  database_inserter.h
db/menu/: menu.cpp  menu.h
db/parsing/: data_parser.cpp  data_parser.h
db/processing/: processing.cpp  processing.h
db/queries/: query_day.h  query_handler.h  query_month.cpp  query_month.h  query_period.cpp  query_utils.cpp  query_utils.h
log_tool/: CMakeLists.txt  ErrorReporter.cpp  ErrorReporter.h  FormatValidator.cpp  FormatValidator.h  IntervalProcessor.cpp  IntervalProcessor.h  LogProcessor.cpp  LogProcessor.h  build.sh  interval_processor_config.json  main.cpp
test/log_generator/: CMakeLists.txt  Config.cpp  Config.h  FileManager.cpp  LogGenerator.cpp  LogGenerator.h  PerformanceReporter.cpp  PerformanceReporter.h  Utils.cpp  Utils.h  main.cpp
test/log_generator/config/: common_activities.json
test/log_generator/src/: main.cpp
time_master/: CMakeLists.txt  bash.sh  build.py  main.cpp  main_cli.cpp
time_master/action_handler/: ActionHandler.cpp  ActionHandler.h  ExportUtils.cpp  ExportUtils.h  FileProcessingHandler.cpp  ReportExporter.cpp
time_master/action_handler/database/: DatabaseManager.cpp  DatabaseManager.h
time_master/action_handler/file/: FilePipelineManager.cpp  FilePipelineManager.h
time_master/action_handler/query/: DirectQueryManager.cpp  DirectQueryManager.h
time_master/action_handler/reporting/: ExportUtils.cpp  ReportExporter.cpp  ReportExporter.h
time_master/cmake/: Packaging.cmake  SourceFileCollection.cmake  TargetSetup.cmake
time_master/common/: AppConfig.h  common_utils.cpp  pch.h  version.h
time_master/config/: interval_processor_config.json
time_master/db_inserter/: DataImporter.cpp
time_master/db_inserter/inserter/: DatabaseInserter.cpp
time_master/db_inserter/model/: time_sheet_model.h
time_master/db_inserter/parser/: DataFileParser.cpp  ParserFactory.cpp
time_master/db_inserter/parser_and_inserter/: ConfigLoader.cpp  ConfigLoader.h  DataFileParser.cpp  DataFileParser.h  ParserConfig.h
time_master/file_handler/: ConfigLoader.cpp  ConfigLoader.h  FileController.cpp  FileController.h  FileUtils.cpp  FileUtils.h
time_master/queries/: QueryHandler.cpp  QueryHandler.h
time_master/queries/_shared/: BaseTexFormatter.h  MonthlyReportData.h  query_data_structs.h  query_utils.h
time_master/queries/daily/: DailyReportFormatterFactory.cpp  DailyReportFormatterFactory.h  DailyReportGenerator.cpp  DailyReportGenerator.h  DailyReportQuerier.cpp  DailyReportQuerier.h  DayFmtFactory.cpp  DayFmtFactory.h  DayGenerator.cpp  DayGenerator.h  DayQuerier.cpp  DayQuerier.h  IDailyReportFormatter.h  IDayFmt.h
time_master/queries/export/: AllDayReports.cpp  AllDayReports.h  AllMonthlyReports.cpp  AllMonthlyReports.h  AllPeriodReports.cpp  AllPeriodReports.h
time_master/queries/format/: IProjectBreakdownFormatter.h  ProjectBreakdownFormatterFactory.cpp  ProjectBreakdownFormatterFactory.h
time_master/queries/formatters/: DailyReportFormatterFactory.cpp  DailyReportFormatterFactory.h  IDailyReportFormatter.h  IMonthlyReportFormatter.h  IPeriodReportFormatter.h  IProjectBreakdownFormatter.h  MonthlyFormatterFactory.cpp  MonthlyFormatterFactory.h  PeriodReportFormatterFactory.cpp  PeriodReportFormatterFactory.h  ProjectBreakdownFormatterFactory.cpp  ProjectBreakdownFormatterFactory.h
time_master/queries/monthly/: IMonthlyReportFormatter.h  MonthFmtFactory.cpp  MonthGenerator.cpp  MonthGenerator.h  MonthQuerier.cpp  MonthQuerier.h  MonthlyFormatterFactory.cpp  MonthlyFormatterFactory.h  MonthlyReportGenerator.cpp  MonthlyReportGenerator.h  MonthlyReportQuerier.cpp  MonthlyReportQuerier.h
time_master/queries/period/: IPeriodReportFormatter.h  PeriodFmtFactory.cpp  PeriodGenerator.cpp  PeriodGenerator.h  PeriodQuerier.cpp  PeriodQuerier.h  PeriodReportFormatterFactory.cpp  PeriodReportFormatterFactory.h  PeriodReportGenerator.cpp  PeriodReportGenerator.h  PeriodReportQuerier.cpp  PeriodReportQuerier.h
time_master/queries/reports/: AllDayReports.cpp  (+5 more)
time_master/reprocessing/: LogProcessor.cpp  LogProcessor.h
time_master/src/: main.cpp  main_cli.cpp  pch.hpp
time_master/time_master_app/: menu.cpp  menu.h
time_master/time_master_cli/: CliController.cpp  CliController.h
(+2298 files in other folders)
