# --- START OF FILE CMakeLists.txt ---
# src/CMakeLists.txt
cmake_minimum_required(VERSION 3.16)
project(TimeTrackerApp VERSION "0.2.0" LANGUAGES CXX)

# ==================== [核心修改] ====================
# [新增] 强制 CMake 的命令行输出使用 UTF-8 编码
# 这可以从根本上解决在 Windows GBK 环境下因中文字符导致的编码错误
set(CMAKE_CLI_FORCE_UTF8 ON)
# ====================================================

# 所有源文件都必须明确写出它们的扩展名
cmake_policy(SET CMP0115 NEW)

# --- Find External Dependencies ---
find_package(SQLite3 REQUIRED)
find_package(nlohmann_json REQUIRED)

# --- 1. 项目范围的设置 ---
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(PLUGIN_OUTPUT_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins")

# 设置编译器启动器（如ccache）
find_program(CCACHE_EXECUTABLE ccache)
if(CCACHE_EXECUTABLE)
    message(STATUS "ccache found, enabling compiler launcher.")
    set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_EXECUTABLE}")
endif()

# --- 2. 包含模块 ---
# 将模块路径添加到CMake的搜索路径中
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

# 1. 首先包含 TargetSetup，因为它定义了 setup_project_target 函数。
include(TargetSetup)
# 2. 然后包含 SourceFileCollection，因为它需要使用上面定义的函数。
include(SourceFileCollection)
# 3. 最后包含 BuildTypeFlags。
include(BuildTypeFlags)

# --- 3. 定义可执行文件目标 ---
add_executable(time_tracker_cli src/main_cli.cpp
    ${COMMON_SOURCES}
    ${CONFIG_VALIDATOR}
    ${DB_INSERTER_SOURCES}
    ${REPORTS_SOURCES}
    ${REPROCESSING_SOURCES}
    ${FILE_HANDLER_SOURCES}
    ${ACTION_HANDLER_SOURCES}
    ${TIME_MASTER_CLI_SOURCES}
)

# 链接到新的共享库
target_link_libraries(time_tracker_cli PRIVATE reports_shared)


# 添加子目录以构建所有日报格式化器的 DLL
add_subdirectory(src/reports/daily/formatters/md)
add_subdirectory(src/reports/daily/formatters/typ)
add_subdirectory(src/reports/daily/formatters/tex)

add_subdirectory(src/reports/monthly/formatters/md)
add_subdirectory(src/reports/monthly/formatters/typ)
add_subdirectory(src/reports/monthly/formatters/tex)

add_subdirectory(src/reports/period/formatters/md)
add_subdirectory(src/reports/period/formatters/tex)
add_subdirectory(src/reports/period/formatters/typ)

# 创建一个包含所有可执行文件目标的列表
set(ALL_TARGETS time_tracker_cli)

# --- 4. 为每个目标应用通用配置 ---
foreach(TARGET_NAME ${ALL_TARGETS})
  setup_project_target(${TARGET_NAME})
endforeach()

# 在每次构建后，无论是否为安装包，都将配置文件复制到输出目录
# 这样可以直接从 build/bin 目录运行程序
foreach(TARGET_NAME ${ALL_TARGETS})
    add_custom_command(
        TARGET ${TARGET_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${CMAKE_CURRENT_SOURCE_DIR}/src/config"
        "$<TARGET_FILE_DIR:${TARGET_NAME}>/config"
        COMMENT "Copying config folder for ${TARGET_NAME}"
    )
endforeach()

# --- 5. 包含特定功能的模块 ---
include(Win32PostBuildCopy) # 包含并执行DLL复制逻辑 
include(Packaging)          # 包含并执行打包逻辑 

# --- 6. 结束语 ---
message(STATUS "CMake configuration finished. Targets are ready to be built.")